Fixing registrar overlaping layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,6 +166,10 @@ p > a:hover {
         margin: 0 auto;
         text-align: center;
     }
+
+    .product {
+      display: none !important;
+    }
 }
 
 /* ----------------- pay page home ------------------*/
